Fix whitespace

--- a/index.css
+++ b/index.css
@@ -5,8 +5,7 @@
   --margin: 0 0;
 }
 
-body
-  { padding: 0 }
+body { padding: 0 }
 
 #badges {
   padding: 0;
